Update colorpicker dep + fix overflow bug in Chrome

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -131,6 +131,7 @@
 
 
 @mixin FormField-control {
+  position: relative;
   display: block;
   max-width: 100%;
   height: $Pollicino-FormField-height;
